@@ -14,6 +14,8 @@ debhelper (12.9.1) UNRELEASED; urgency=medium
 
   [ Nicholas Guriev ]
   * cmake: Verbose autogen rules.
+  * cmake: Skip install all dependency with compatibility level 13 and
+    above.
 
   [ Translations ]
   * Update German translation (Chris Leick)  (Closes: #951917)
